--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
 </head>
 <body>
     <h1>PPP</h1>
+    <div
+    class="cloudimage-360"
+    data-folder="https://scaleflex.cloudimg.io/crop/1920x700/n/https://scaleflex.airstore.io/demo/360-car/"
+    data-filename="iris-{index}.jpeg"
+    data-amount="36"
+    data-magnifier="3"
+    data-spin-reverse
+  ></div>
+  <!-- Add script tag with CDN link to js-cloudimage-360-view lib after all content in body tag -->
+  <script src="https://cdn.scaleflex.it/plugins/js-cloudimage-360-view/2/js-cloudimage-360-view.min.js"></script>
+
 </body>
 </html>
